# MizukiPrism

./: .autonoe-note.md  .gitignore  CLAUDE.md  DEDUP_PLAN.md  DEDUP_REPORT.md  README.md  SPEC-Auth.md  SPEC-Metadata.md  SPEC-MizukiLens.md  SPEC.md  design.html  package-lock.json  package.json  playwright.config.ts
admin/: schema.sql  wrangler.toml
app/: globals.css  layout.tsx  page.tsx
data/: songs.json  streamer.json  streams.json  users.json
lib/: data.ts  fan-auth.ts  lyrics.ts  types.ts  user-playlists.ts  utils.ts
public/: CNAME
scripts/: eximport-all.sh
tests/: admin-001.spec.ts  auth-001.spec.ts  core-001.spec.ts  core-002.spec.ts  core-003.spec.ts  fix-002.spec.ts  fix-007.spec.ts  meta-006.spec.ts  mobile-streams.spec.ts  now-playing.spec.ts  play-001.spec.ts  play-002.spec.ts  play-003.spec.ts  play-004.spec.ts  ui-001.spec.ts
tools/: apply_standardization.py  dedup_decisions.json  find_duplicates.py
tools/mizukilens/: pyproject.toml
tools/mizukilens/src/mizukilens/: __init__.py  __main__.py  cache.py  cli.py  config.py  db_client.py  discovery.py  export.py  extraction.py  importer.py  metadata.py  review_ops.py  stamp.py  tui.py
tools/mizukilens/src/mizukilens/stamp_static/: stamp.css  stamp.js
tools/mizukilens/src/mizukilens/stamp_templates/: index.html
tools/mizukilens/tests/: test_cache.py  test_cli.py  test_discovery.py  test_export.py  test_extraction.py  test_importer.py  test_metadata.py  test_review_ops.py  test_stamp.py  test_tui.py
workers/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
(+66 files in other folders)
